--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="#" class="tl1" id="y1911s"><div id="y1911c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1912s"><div id="y1912c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1913s"><div id="y1913c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
+      <a href="index_malevich2.html" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
       <a href="index_malevich.html" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1916s"><div id="y1916c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1917s"><div id="y1917c" class="tl2"></div></a>
@@ -57,7 +57,7 @@
       <p>Супрематизм&nbsp;&mdash; направление, полностью отказавшееся от&nbsp;материальности и&nbsp;изобразительности в&nbsp;искусстве, сосредоточившееся на&nbsp;поиске композиции, цвета, динамики простых геометрических форм и&nbsp;изучении их&nbsp;воздействия на&nbsp;зрителя.</p>
       <p>Нередко от&nbsp;людей ускользает философский и&nbsp;художественный подтекст работ.</p>
       <p>В&nbsp;том, что супрематисты вкладывали смысл в&nbsp;расположение объектов на&nbsp;полотне, можно убедиться, случайным образом меняя известные картины и&nbsp;сравнивая результат с&nbsp;оригиналом.</p>
-      <p>Сейчас работают 1915, 1918 и 1924 года.</p>
+      <p>Сейчас работают 1914, 1915, 1918 и 1924 года.</p>
       <!-- <p>&copy;А.Моск</p> -->
       <a target="_blank" href="https://www.facebook.com/av.mosk">а.моск</a>
     </section>
