--- a/index_lisitskiy.html
+++ b/index_lisitskiy.html
@@ -31,7 +31,7 @@
       <a href="#" class="tl1" id="y1911s"><div id="y1911c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1912s"><div id="y1912c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1913s"><div id="y1913c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
+      <a href="index_malevich2.html" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
       <a href="index_malevich.html" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1916s"><div id="y1916c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1917s"><div id="y1917c" class="tl2"></div></a>
