--- a/index_malevich2.html
+++ b/index_malevich2.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/timeline.css">
-  <link rel="stylesheet" href="stylesheets/malevich.css">
+  <link rel="stylesheet" href="stylesheets/malevich2.css">
   <!-- <link rel="stylesheet" href="stylesheets/chaos.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/menubar.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/3d.css"> -->
 
   <script src="javascripts/jquery.js" charset="utf-8"></script>
-  <script src="javascripts/index-malevich.js" charset="utf-8"></script>
+  <script src="javascripts/index-malevich2.js" charset="utf-8"></script>
   <script src="javascripts/chaos.js" charset="utf-8"></script>
   <!-- <script src="javascripts/3d.js" charset="utf-8"></script> -->
 
@@ -68,40 +68,38 @@
          <div class="rectangle f7"></div>
          <div class="rectangle f8"></div>
          <div class="rectangle f9"></div>
+         <div class="rectangle f10"></div>
+         <div class="rectangle f11"></div>
+         <div class="rectangle f12"></div>
+         <div class="rectangle f13"></div>
        </section>
      </section>
     </div>
 
     <section class="figcaption nomobile">
-      <h1>«Живописный реализм футболиста»</h1>
+      <h1>«Супрематическая живопись: летящий аэроплан»</h1>
       <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">«Живописный реализм футболиста»</a> -->
-      <h2>Казимир Малевич, 1915.<br>
-        44x69,9 см. Холст, масло.<br>
-        Городской музей Амстердама.<br>
-      </h2>
+      <h2>Казимир Малевич, 1915</h2>
       <!-- <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p> -->
-      <p>Малевич считал супрематизм результатом развития кубизма, в&nbsp;котором исчезают реальные предметы и&nbsp;вещи, понятия &laquo;верх&raquo; и&nbsp;&laquo;низ&raquo;. Пространство произведения не&nbsp;зависит ни&nbsp;от&nbsp;чего. Cупрематические творения&nbsp;&mdash; самостоятельный мир, который, несмотря на&nbsp;замкнутость и&nbsp;ограниченность, имеет внутреннюю гармонию.</p>
+      <p>Лисицкий понимает, что плоская поверхность холста ограничивает его как художника. Эль создает так называемые проуны (&laquo;проекты утверждения нового&raquo;), в&nbsp;которых живопись граничит с&nbsp;архитектурой, объемные трехмерные супрематические миры, призванные совершить революцию в&nbsp;искусстве 20-х годов.</p>
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
         <div class="tooriginal  original">к оригиналу</div>
       </nav>
-      <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">смотреть в Google Arts&Culture</a> -->
     </section>
 
-    <section class="figcaption mobile">
+    <!-- <section class="figcaption mobile">
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
         <div class="tooriginal original">к оригиналу</div>
-        <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
       </nav>
       <h1>«Живописный реализм футболиста»</h1>
       <h2>Казимир Малевич, 1915.<br>
         44x69,9 см. Холст, масло. <br>
         Городской музей Амстердама.
       </h2>
-      <!-- <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p> -->
       <p>Малевич считал супрематизм результатом развития кубизма, в&nbsp;котором исчезают реальные предметы и&nbsp;вещи, испаряются понятия &laquo;верх&raquo; и&nbsp;&laquo;низ&raquo;. Пространство произведения не&nbsp;зависит ни&nbsp;от&nbsp;чего, включая силу притяжения. По&nbsp;мнению Малевича, супрематические творения&nbsp;&mdash; самостоятельный мир, который, несмотря на&nbsp;замкнутость и&nbsp;ограниченность, имеет внутреннюю гармонию.</p>
-    </section>
+    </section> -->
   </section>
 
 
