--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
       <p>Супрематизм&nbsp;&mdash; направление, полностью отказавшееся от&nbsp;материальности и&nbsp;изобразительности в&nbsp;искусстве, сосредоточившееся на&nbsp;поиске композиции, цвета, динамики простых геометрических форм и&nbsp;изучении их&nbsp;воздействия на&nbsp;зрителя.</p>
       <p>Нередко от&nbsp;людей ускользает философский и&nbsp;художественный подтекст работ.</p>
       <p>В&nbsp;том, что супрематисты вкладывали смысл в&nbsp;расположение объектов на&nbsp;полотне, можно убедиться, случайным образом меняя известные картины и&nbsp;сравнивая результат с&nbsp;оригиналом.</p>
-      <p>Сейчас работают 1914, 1915, 1918 и 1924 года.</p>
       <!-- <p>&copy;А.Моск</p> -->
-      <a target="_blank" href="https://www.facebook.com/av.mosk">а.моск</a>
+      <a target="_blank" href="https://www.facebook.com/av.mosk">сделал а.моск</a>
     </section>
 </body>
 </html>
