--- a/index_lisitskiy.html
+++ b/index_lisitskiy.html
@@ -82,7 +82,7 @@
         Museu Coleção Berardo
       </h2>
       <!-- <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p> -->
-      <p>Лисицкий понимает, что плоская поверхность холста ограничивает его как художника. Эль создает так называемые проуны (&laquo;проекты утверждения нового&raquo;), в&nbsp;которых живопись граничит с&nbsp;архитектурой, объемные трехмерные супрематические миры, призванные совершить революцию в&nbsp;искусстве 20-х годов.</p>
+      <p>Лисицкий понимает, что плоская поверхность холста ограничивает его как художника. Он создает так называемые проуны (&laquo;проекты утверждения нового&raquo;), в&nbsp;которых живопись граничит с&nbsp;архитектурой, объемные трехмерные супрематические миры, призванные совершить революцию в&nbsp;искусстве 20-х годов.</p>
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
         <div class="tooriginal  original">к оригиналу</div>
