--- a/index_malevich2.html
+++ b/index_malevich2.html
@@ -81,7 +81,7 @@
       <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">«Живописный реализм футболиста»</a> -->
       <h2>Казимир Малевич, 1915</h2>
       <!-- <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p> -->
-      <p>Лисицкий понимает, что плоская поверхность холста ограничивает его как художника. Эль создает так называемые проуны (&laquo;проекты утверждения нового&raquo;), в&nbsp;которых живопись граничит с&nbsp;архитектурой, объемные трехмерные супрематические миры, призванные совершить революцию в&nbsp;искусстве 20-х годов.</p>
+      <p>Малевич считал супрематизм результатом развития кубизма, в&nbsp;котором исчезают реальные предметы и&nbsp;вещи, понятия &laquo;верх&raquo; и&nbsp;&laquo;низ&raquo;. Пространство произведения не&nbsp;зависит ни&nbsp;от&nbsp;чего. Cупрематические творения&nbsp;&mdash; самостоятельный мир, который, несмотря на&nbsp;замкнутость и&nbsp;ограниченность, имеет внутреннюю гармонию.</p>
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
         <div class="tooriginal  original">к оригиналу</div>
