--- a/index_lisitskiy.html
+++ b/index_lisitskiy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Suprematism</title>
+  <title>RANDOMATISM</title>
 
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
