--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <p>Нередко от&nbsp;людей ускользает философский и&nbsp;художественный подтекст работ.</p>
       <p>В&nbsp;том, что супрематисты вкладывали смысл в&nbsp;расположение объектов на&nbsp;полотне, можно убедиться, случайным образом меняя известные картины и&nbsp;сравнивая результат с&nbsp;оригиналом.</p>
       <!-- <p>&copy;А.Моск</p> -->
-      <!-- <a target="_blank" href="https://www.facebook.com/av.mosk">сделал а.моск</a> -->
+      <a target="_blank" href="https://www.facebook.com/av.mosk">сделал а.моск</a>
     </section>
 </body>
 </html>
