--- a/index.html
+++ b/index.html
@@ -7,58 +7,37 @@
 
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="stylesheet" href="stylesheets/timeline.css">
-  <link rel="stylesheet" href="stylesheets/index.css">
-  <!-- <link rel="stylesheet" href="stylesheets/chaos.css"> -->
-  <!-- <link rel="stylesheet" href="stylesheets/menubar.css"> -->
-  <!-- <link rel="stylesheet" href="stylesheets/3d.css"> -->
-
-  <script src="javascripts/jquery.js" charset="utf-8"></script>
-  <script src="javascripts/index.js" charset="utf-8"></script>
-  <script src="javascripts/chaos.js" charset="utf-8"></script>
-  <!-- <script src="javascripts/3d.js" charset="utf-8"></script> -->
 
   <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
+
+  <script src="javascripts/jquery.js" charset="utf-8"></script>
+  <script src="javascripts/teletype.js" charset="utf-8"></script>
+  <script src="javascripts/scenario.js" charset="utf-8"></script>
+
 </head>
 <body>
+  <section class="s1">
+    <div class="text">
+      <h1 class="topText"></h1>
+      <h2 class="bottomText">может ли искусство быть рандомным?</h2>
+    </div>
 
-  <section class="timelineflex">
-    <section class="timeline">
-      <div class="tl3"></div>
-      <a href="index.html" class="tl1" id="abouts"><div id="aboutc" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1910s"><div id="y1910c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1911s"><div id="y1911c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1912s"><div id="y1912c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1913s"><div id="y1913c" class="tl2"></div></a>
-      <a href="index_malevich2.html" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
-      <a href="index_malevich.html" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1916s"><div id="y1916c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1917s"><div id="y1917c" class="tl2"></div></a>
-      <a href="index_popova.html" class="tl1" id="y1918s"><div id="y1918c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1919s"><div id="y1919c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1920s"><div id="y1920c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1921s"><div id="y1921c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1922s"><div id="y1922c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1923s"><div id="y1923c" class="tl2"></div></a>
-      <a href="index_lisitskiy.html" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1925s"><div id="y1925c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1926s"><div id="y1926c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1927s"><div id="y1927c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1928s"><div id="y1928c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1929s"><div id="y1929c" class="tl2"></div></a>
-    </section>
+    <div class="arrow bounce"></div>
   </section>
 
-  <section class="main mainabout">
-    <section class="figcaption about">
-      <h1>«Рандоматизм»</h1>
-      <!-- <h2>сайт рандомного искусства</h2> -->
-      <p>Супрематизм&nbsp;&mdash; направление, полностью отказавшееся от&nbsp;материальности и&nbsp;изобразительности в&nbsp;искусстве, сосредоточившееся на&nbsp;поиске композиции, цвета, динамики простых геометрических форм и&nbsp;изучении их&nbsp;воздействия на&nbsp;зрителя.</p>
-      <p>Нередко от&nbsp;людей ускользает философский и&nbsp;художественный подтекст работ.</p>
-      <p>В&nbsp;том, что супрематисты вкладывали смысл в&nbsp;расположение объектов на&nbsp;полотне, можно убедиться, случайным образом меняя известные картины и&nbsp;сравнивая результат с&nbsp;оригиналом.</p>
-      <!-- <p>&copy;А.Моск</p> -->
-      <a target="_blank" href="https://www.facebook.com/av.mosk">сделал а.моск</a>
-    </section>
+  <section class="s2">
+    <div>
+      <div class="s2text">
+        <h3>Супрематизм</h3>
+        <p>Направление, полностью отказавшееся от материальности и изобразительности в искусстве, сосредоточившееся на поиске композиции, цвета, динамики простых геометрических форм и изучении их воздействия на зрителя.</p>
+      </div>
+      <div class="redslash"></div>
+      <div class="s2text">
+        <h3>Рандоматизм</h3>
+        <p>Проект, в котором можно рандоматизировать супрематические картины. Главная цель— понять, насколько выверены великие произведения и можно ли рандомным образом получить достойный результат?</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
